src/snapshots/blis__compile__tests__test_programs__err_compile__break_label_missing.blis.errors.snap
---
source: src/compile.rs
description: "loop outer {\n    break inner;\n}\n"
input_file: test_programs/err_compile/break_label_missing.blis
---
CompileErrors([
  NoBreakLabel(Identifier(
    name: "inner",
  )),
])
