src/snapshots/blis__compile__tests__test_programs__err_compile__continue_label_missing.blis.errors.snap
---
source: src/compile.rs
description: "loop outer {\n    continue inner;\n}\n"
input_file: test_programs/err_compile/continue_label_missing.blis
---
CompileErrors([
  NoContinueLabel(Identifier(
    name: "inner",
  )),
])
