src/snapshots/blis__compile__tests__test_programs__err_compile__duplicate_variable.blis.errors.snap
---
source: src/compile.rs
description: "func main() {\n    let a = 0;\n    let a = 1;\n}\n"
input_file: test_programs/err_compile/duplicate_variable.blis
---
CompileErrors([
  DuplicateVariable(Identifier(
    name: "a",
  )),
])
