src/snapshots/blis__compile__tests__test_programs__err_compile__self_outside_method_func.blis.errors.snap
---
source: src/compile.rs
description: "func g() {\n    self;\n}\n"
input_file: test_programs/err_compile/self_outside_method_func.blis
---
CompileErrors([
  SelfOutsideMethod,
])
