src/snapshots/blis__compile__tests__test_programs__err_compile__self_outside_method_script.blis.errors.snap
---
source: src/compile.rs
description: "self;\n"
input_file: test_programs/err_compile/self_outside_method_script.blis
---
CompileErrors([
  SelfOutsideMethod,
])
